feat: login and signup form added

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -18,9 +18,9 @@
         <div class="hidden md:flex items-center space-x-6">
             <nav>
                 <ul class="flex space-x-6">
-                    <li><a routerLink="/" class="hover:text-primary">Home</a></li>
-                    <li><a routerLink="/" class="hover:text-primary">Shop</a></li>
-                    <li><a routerLink="/contact" class="hover:text-primary">Contact</a></li>
+                    <li><a routerLink="/" class="hover:text-primary">Home </a></li>
+                    <li><a routerLink="/order" class="hover:text-primary">Orders </a></li>
+                    <li><a routerLink="/login" class="hover:text-primary">Login</a></li>
                 </ul>
             </nav>
 
