--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,1 +1,12 @@
-<p>signup works!</p>
+<div class="pt-24 w-full min-h-screen flex justify-center px-4 sm:px-8 lg:px-16">
+    <div class="w-full max-w-md sm:max-w-lg lg:max-w-2xl">
+        <div class="px-4 sm:px-8 py-5 bg-white rounded-lg">
+            <p class="pb-6 font-bold text-2xl sm:text-3xl text-primary">Signup Form</p>
+            <app-dynamic-form [formFields]="_signupFormSchema"></app-dynamic-form>
+            <div>
+                <p>Forget password</p>
+                <p class="pt-1">Already have an account ? <a routerLink="/login" class="text-primary">Login</a></p>
+            </div>
+        </div>
+    </div>
+</div>
