--- a/src/app/reusable/email-input/email-input.component.html
+++ b/src/app/reusable/email-input/email-input.component.html
@@ -1,2 +1,7 @@
-<label>{{ label }}</label>
-<input [formControl]="control" type="email" />
+<mat-form-field [appearance]="appearance" class="w-full">
+    <mat-label>{{ label }}</mat-label>
+    <input matInput [placeholder]="placeholder" [formControl]="control" class="w-full"/>
+    <mat-icon *ngIf="_matIcon && iconPosition === 'suffix'" matSuffix>{{_matIcon}}</mat-icon>
+    <mat-icon *ngIf="_matIcon && iconPosition === 'prefix'" matPrefix>{{_matIcon}}</mat-icon>
+    <mat-hint *ngIf="hint">{{ hint }}</mat-hint>
+</mat-form-field>
