--- a/src/app/reusable/number-input/number-input.component.html
+++ b/src/app/reusable/number-input/number-input.component.html
@@ -1,1 +1,7 @@
-<p>number-input works!</p>
+<mat-form-field [appearance]="appearance" class="w-full">
+    <mat-label>{{ label }}</mat-label>
+    <input matInput [placeholder]="placeholder" [formControl]="control" class="w-full" />
+    <mat-icon *ngIf="matIcon && iconPosition === 'suffix'" matSuffix>{{matIcon}}</mat-icon>
+    <mat-icon *ngIf="matIcon && iconPosition === 'prefix'" matPrefix>{{matIcon}}</mat-icon>
+    <mat-hint *ngIf="hint">{{ hint }}</mat-hint>
+</mat-form-field>
