feat: added home page, product details page, similar products feature and created required action,state and effect for ngrx store

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,143 @@
-<p>footer works!</p>
+<footer class="bg-[#212121] text-white">
+    <div
+        class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-6 xl:grid-cols-6 gap-6 px-4 sm:px-4 md:px-16 pt-14 pb-8 text-sm"
+    >
+        <div>
+            <p class="text-[#878787]">ABOUT</p>
+            <ul class="font-medium pt-3">
+                <li>
+                    <a href="">Contact Us</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">About Us</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Carriers</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Flipkart Stories</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Press</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Corporate Information</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <p class="text-[#878787]">GROUP COMPANIES</p>
+            <ul class="font-medium pt-3">
+                <li class="pt-1">
+                    <a href="">Myntra</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Cleartrip</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Shopsy</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <p class="text-[#878787]">HELP</p>
+            <ul class="font-medium pt-3">
+                <li>
+                    <a href="">Payments</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Shipping</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Cancellation & Returns</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">FAQ</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Report Infringement</a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <p class="text-[#878787]">CONSUMER POLICY</p>
+            <ul class="font-medium pt-3">
+                <li>
+                    <a href="">Cancellation & Returns</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Terms Of Use</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Security</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Privacy</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Sitemap</a>
+                </li>
+                <li class="pt-1">
+                    <a href="">Grievance Redressal</a>
+                </li>
+                <li class="pt-1">
+                    <a href=""> EPR Compliance</a>
+                </li>
+            </ul>
+        </div>
+        <div class="flex gap-0 sm:gap-0 md:gap-8">
+            <div class="h-full bg-gray-500 sm:w-0 md:w-[1px]"></div>
+            <div>
+                <p class="text-[#878787]">Mail Us:</p>
+                <div class="pt-3">
+                    <p class="pt-1">Flipkart Internet Private Limited,</p>
+                    <p class="pt-1">Buildings Alyssa, Begonia &amp;</p>
+                    <p class="pt-1">Clove Embassy Tech Village,</p>
+                    <p class="pt-1">Outer Ring Road, Devarabeesanahalli Village,</p>
+                    <p class="pt-1">Bengaluru, 560103,</p>
+                    <p class="pt-1">Karnataka, India</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            <p class="text-[#878787]">Registered Office Address:</p>
+            <div class="pt-3">
+                <p class="pt-1">Flipkart Internet Private Limited,</p>
+                <p class="pt-1">Buildings Alyssa, Begonia &amp;</p>
+                <p class="pt-1">Clove Embassy Tech Village,</p>
+                <p class="pt-1">Outer Ring Road, Devarabeesanahalli Village,</p>
+                <p class="pt-1">Bengaluru, 560103,</p>
+                <p class="pt-1">Karnataka, India</p>
+                <p class="pt-1">CIN : U51109KA2012PTC066107</p>
+                <p class="pt-1"></p>
+                <p class="pt-1">
+                    Telephone: <a href="tel:044-45614700"><span class="text-blue-600">044-45614700</span></a> /
+                    <a href="tel:044-67415800"><span class="text-blue-600">044-67415800</span> </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="h-px mt-8 bg-gray-500 border-0" />
+    <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-6 gap-4 px-4 md:px-28 py-8">
+        <div class="flex items-center gap-1">
+            <img src="assets/svg/help-centre.svg" alt="" />
+            <a href="" class="text-xs">Become a Seller</a>
+        </div>
+        <div class="flex items-center gap-1">
+            <img src="assets/svg/gift-card.svg" alt="" />
+            <a href="" class="text-xs">Advertise</a>
+        </div>
+        <div class="flex items-center gap-1">
+            <img src="assets/svg/advertise.svg" alt="" />
+            <a href="" class="text-xs">Gift Cards</a>
+        </div>
+        <div class="flex items-center gap-1">
+            <img src="assets/svg/help-centre.svg" alt="" />
+            <a href="" class="text-xs">Help Center</a>
+        </div>
+        <p class="text-xs">© 2007-{{ currentYear }} Flipkart.com</p>
+        <div class="">
+            <img src="assets/svg/payment-method.svg" alt="" />
+        </div>
+    </div>
+</footer>
