--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,8 +1,14 @@
 <div *ngIf="product" class="bg-white flex justify-center shadow-sm p-3 border rounded-lg" (click)="onProductSelect(product)">
-    <div class="p-3">
+    <div class="p-3 h-[300px]">
         <img [src]="product.image" [alt]="product.title" class="h-[200px]" />
         <p class="pt-5 text-center text-xl">
-            <i class="fa-solid fa-dollar-sign"></i> <span class="pl-1">{{ product.price }}</span>
+            <span>
+                <i class="fa-solid fa-dollar-sign"></i> <span class="pl-1">{{ priceAfterDiscount }}</span></span
+            >
+            <span class="line-through pl-3" *ngIf="product.price !== priceAfterDiscount"
+                ><span class="pl-1 text-lg text-gray-500">{{ product.price }}</span></span
+            >
         </p>
+        <p *ngIf="discountPercent > 0" class="pt-3 text-center text-lg font-medium text-green-700">{{ discountPercent }}% Off</p>
     </div>
 </div>
