--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="px-4 sm:px-8 md:px-16 pt-10 sm:pt-16 md:pt-24 pb-8 min-h-screen bg-primary-dark">
+<div class="px-4 sm:px-8 md:px-16 pt-10 sm:pt-16 md:pt-24 pb-8 min-h-screen bg-[#f1f3f6]">
     <div class="grid grid-cols-1 md:grid-cols-5 gap-6">
         <div class="col-span-3">
             <ng-container *ngIf="(cartProducts$ | async)?.length; else emptyBlock">
@@ -71,7 +71,13 @@
     <div class="w-full h-full flex justify-center items-center">
         <div class="text-center">
             <p class="text-3xl text-primary font-medium">There is no items into your cart.</p>
-            <p class="pt-8"><a routerLink="/" class="bg-yellow-400 px-4 md:px-6 py-2 md:py-3 text-black text-base md:text-lg hover:shadow-lg transition ease-in-out duration-300 rounded-lg">Continue Shopping</a></p>
+            <p class="pt-8">
+                <a
+                    routerLink="/"
+                    class="bg-yellow-400 px-4 md:px-6 py-2 md:py-3 text-black text-base md:text-lg hover:shadow-lg transition ease-in-out duration-300 rounded-lg"
+                    >Continue Shopping</a
+                >
+            </p>
         </div>
     </div>
 </ng-template>
