--- a/src/app/reusable/password-input/password-input.component.html
+++ b/src/app/reusable/password-input/password-input.component.html
@@ -1,6 +1,13 @@
 <mat-form-field [appearance]="appearance" class="w-full">
     <mat-label>{{ label }}</mat-label>
-    <input matInput [type]="_show ? 'text' : 'password'" [placeholder]="placeholder" [formControl]="control" class="w-full" />
-    <mat-icon *ngIf="togglePassword"  matSuffix (click)="_show = !_show">{{ _matIcon }}</mat-icon>
+    <input
+        matInput
+        [type]="_show ? 'text' : 'password'"
+        [placeholder]="placeholder"
+        [formControl]="control"
+        class="w-full"
+        autocomplete="new-password"
+    />
+    <mat-icon *ngIf="togglePassword" matSuffix (click)="_show = !_show">{{ _matIcon }}</mat-icon>
     <mat-hint *ngIf="hint">{{ hint }}</mat-hint>
 </mat-form-field>
