--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 
 body {
     font-family: 'Montserrat', sans-serif;
