--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container mx-auto px-4 py-4 flex items-center justify-between">
         <!-- Logo -->
         <div class="text-2xl font-bold">
-            <a routerLink="/" class="flex items-center gap-3 italic">
+            <a routerLink="/" class="flex items-center gap-3 italic" scrollToTop>
                 <img class="w-[50px] h-[50px]" src="assets/images/icons/logo_lite.png" alt="" /><span>Flipkart</span>
             </a>
         </div>
