--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -6,6 +6,7 @@
             </div>
             <div class="pt-8 flex justify-between gap-4 w-full">
                 <button
+                    (click)="onAddToCart(product)"
                     class="bg-[#ff9f00] text-white w-full sm:w-1/2 py-4 text-sm sm:text-base flex items-center justify-center gap-1"
                 >
                     <i class="fa-solid fa-cart-shopping"></i>
@@ -35,55 +36,33 @@
                 <img class="w-24 h-auto" src="assets/images/icons/assured.png" alt="" />
             </div>
 
-            <p class="text-green-700 pt-3">Special Price</p>
-            <div class="flex items-baseline gap-4 pt-1">
+            <p class="text-green-700 pt-3" *ngIf="getDiscountPercent(product) > 0">Special Price</p>
+            <div class="flex items-baseline gap-4 pt-1" [ngClass]="getDiscountPercent(product) > 0 ? '' : 'pt-5'">
                 <span class="text-3xl font-medium">
                     <i class="fa-solid fa-dollar-sign"></i>{{ getPriceAfterDiscount(product) }}
                 </span>
-                <span class="line-through text-gray-500 text-lg"><i class="fa-solid fa-dollar-sign"></i>{{ product.price }}</span>
-                <span class="text-green-700 font-medium text-lg">{{ getDiscountPercent(product) }}% off</span>
+                <span class="line-through text-gray-500 text-lg" *ngIf="getDiscountPercent(product) > 0"
+                    ><i class="fa-solid fa-dollar-sign"></i>{{ product.price }}</span
+                >
+                <span class="text-green-700 font-medium text-lg" *ngIf="getDiscountPercent(product) > 0"
+                    >{{ getDiscountPercent(product) }}% off</span
+                >
             </div>
 
-            <div class="pt-5">
+            <div class="pt-5" *ngIf="offers.length">
                 <h2 class="text-lg font-medium">Available Offers</h2>
                 <div class="pt-3 space-y-2">
-                    <div class="flex items-center gap-3">
+                    <div class="flex items-center gap-3" *ngFor="let offer of _offers">
                         <img class="w-5 h-5" src="assets/images/icons/tags.webp" alt="Bank Offer" />
                         <span
-                            ><span class="font-medium">Bank Offer</span
-                            ><span class="pl-2">5% Unlimited Cashback on Flipkart Axis Bank Credit Card</span>
-                            <a href="#" class="text-primary">T&C</a></span
+                            ><span class="font-medium">{{ offer.title }}</span
+                            ><span class="pl-2">{{ offer.description }}</span>
+                            <a [href]="offer.link" class="text-primary">{{ offer.linkText }}</a></span
                         >
                     </div>
-                    <div class="flex items-center gap-3">
-                        <img class="w-5 h-5" src="assets/images/icons/tags.webp" alt="Bank Offer" />
-                        <span
-                            ><span class="font-medium">Bank Offer</span
-                            ><span class="pl-2"
-                                >10% off up to ₹1,500 on IDFC FIRST Bank Credit EMI Txns on orders of ₹5,000 and above</span
-                            >
-                            <a href="#" class="text-primary">T&C</a></span
-                        >
-                    </div>
-                    <div class="flex items-center gap-3">
-                        <img class="w-5 h-5" src="assets/images/icons/tags.webp" alt="Bank Offer" />
-                        <span
-                            ><span class="font-medium"> Bank Offer</span
-                            ><span class="pl-2"
-                                >Flat ₹1000 off on OneCard Credit Card EMI Transactions on orders of ₹10,000 and above</span
-                            >
-                            <a href="#" class="text-primary">T&C</a></span
-                        >
-                    </div>
-                    <div class="flex items-center gap-3">
-                        <img class="w-5 h-5" src="assets/images/icons/tags.webp" alt="Bank Offer" />
-                        <span
-                            ><span class="font-medium">Special Price</span
-                            ><span class="pl-2">Get extra 31% off (price inclusive of cashback/coupon)</span>
-                            <a href="#" class="text-primary">T&C</a></span
-                        >
-                    </div>
-                    <p class="text-primary cursor-pointer pt-2 font-medium">View 8 more offers</p>
+                    <p class="text-primary cursor-pointer pt-2 font-medium" *ngIf="_offers < offers" (click)="onShowAllOffers()">
+                        View {{ offers.length - _offers.length }} more offers
+                    </p>
                 </div>
             </div>
 
