fix: removed hard coded img urls added nvmrc file

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,7 +7,7 @@
             </div>
             <img
                 class="absolute bottom-5 left-5 w-3/4 max-w-xs"
-                src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/login_img-dec4bf.png"
+                src="assets/images/login_img.png"
                 alt="Login Illustration"
             />
         </div>
