fix: desing improved and fixed similar product issue

--- a/src/app/components/product-carousal/product-carousal.component.html
+++ b/src/app/components/product-carousal/product-carousal.component.html
@@ -8,6 +8,7 @@
                 *ngIf="hasDetailsBtn"
                 class="fa-solid fa-circle-chevron-right fa-2xl text-primary hover:cursor-pointer"
                 (click)="onSelectCategory(category)"
+                scrollToTop
             ></i>
         </p>
     </div>
