--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,11 +5,7 @@
                 <p class="text-3xl text-white font-medium">Looks like you're new here!</p>
                 <p class="text-xl pt-8 text-white">Sign up with your mobile number to get started</p>
             </div>
-            <img
-                class="absolute bottom-5 left-5 w-3/4 max-w-xs"
-                src="assets/images/login_img.png"
-                alt="Login Illustration"
-            />
+            <img class="absolute bottom-5 left-5 w-3/4 max-w-xs" src="assets/images/login_img.png" alt="Login Illustration" />
         </div>
         <div class="bg-white px-8 py-16 relative">
             <div class="w-full max-w-md">
