--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -66,6 +66,10 @@
                 </div>
             </div>
 
+            <div class="pt-5 pr-5">
+                <p class="text-justify leading-relaxed text-gray-600">{{ product.description }}</p>
+            </div>
+
             <div class="py-8 pr-5">
                 <div class="border">
                     <h3 class="px-8 py-3 text-2xl font-medium">Specifications</h3>
